Update subtitle and button text in index.html

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
   <div id="app" class="container" hidden>
     <header>
       <h1>Instrumentify — Playlist → Instrumentals</h1>
-      <p id="subtitle">Paste a Spotify playlist URL or sign in (recommended) to fetch playlists.</p>
+      <p id="subtitle">Sign in and then Paste a Spotify Playlist URL and press Fetch!. This may take a while.</p>
     </header>
 
     <section class="controls">
       <div style="display:flex;gap:8px;align-items:center;">
         <input id="playlistInput" placeholder="https://open.spotify.com/playlist/..." style="flex:1;" />
         <button id="btn-login">Sign in with Spotify</button>
-        <button id="fetchPlaylist">Fetch</button>
+        <button id="fetchPlaylist">Fetch!</button>
       </div>
 
       <div style="margin-top:8px;">
