--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <div id="app" class="container" hidden>
     <header>
       <h1>Instrumentify — Playlist → Instrumentals</h1>
-      <p id="subtitle">Sign in and then Paste a Spotify Playlist URL and press Fetch!. This may take a while.</p>
+      <p id="subtitle">Sign in, paste a Spotify Playlist URL and press Fetch!. This may take a while.</p>
+      <p id="subtitle">Also Tiny and Medium are the same thing im too lazy to change it lol</p>
     </header>
 
     <section class="controls">
